<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_background3">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:padding="16dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_xlarge"
                android:layout_marginEnd="@dimen/margin_xlarge"
                android:layout_marginBottom="@dimen/margin_large"
                android:text="@string/app_name"
                android:textSize="42sp"
                android:textStyle="bold"
                android:gravity="center"/>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_medium"
                android:layout_marginEnd="@dimen/margin_medium"
                android:layout_marginTop="@dimen/margin_small"
                android:hint="@string/hint_email"
                style="?attr/textInputOutlinedStyle"
                app:startIconDrawable="@drawable/outline_alternate_email_24">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/textInputEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="12dp"
                    android:inputType="textEmailAddress"
                    android:importantForAutofill="yes" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_medium"
                android:layout_marginEnd="@dimen/margin_medium"
                android:layout_marginTop="@dimen/margin_medium"
                android:hint="@string/password"
                style="?attr/textInputOutlinedStyle"
                app:endIconMode="password_toggle"
                app:startIconDrawable="@drawable/outline_password_24">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/textInputPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:importantForAutofill="yes" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/forgot_password_button"
                style="@style/Widget.Material3.Button.TextButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginEnd="@dimen/margin_medium"
                android:textAppearance="@style/TextAppearance.Material3.BodySmall"
                android:text="@string/did_you_forget_your_password"
                android:textColor="?attr/colorPrimary" />

            <CheckBox
                android:id="@+id/cbRemember"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                android:text="@string/remember_me" />

            <Button
                android:id="@+id/login_button"
                style="@style/Widget.Material3.Button.ElevatedButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/login"
                android:layout_marginStart="50dp"
                android:layout_marginEnd="50dp"
                android:layout_marginTop="32dp"
                android:textAppearance="@style/TextAppearance.Material3.BodyMedium" />

            <RelativeLayout
                android:layout_marginTop="24dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"
                android:layout_marginEnd="50dp">
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_centerInParent="true"
                    android:background="#555"/>
                <TextView
                    android:id="@+id/text_or"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:background="@android:color/transparent"
                    android:paddingHorizontal="8dp"
                    android:text="@string/or_separator" />
            </RelativeLayout>

            <Button
                android:id="@+id/google_sign_in_button"
                style="@style/Widget.Material3.Button.ElevatedButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/login_with_google"
                android:textAppearance="@style/TextAppearance.Material3.BodyMedium"
                android:layout_marginTop="24dp"
                android:layout_marginStart="50dp"
                android:layout_marginEnd="50dp"
                app:icon="@drawable/icon_google"
                app:iconGravity="textStart"
                app:iconTint="@null" />

            <Button
                android:id="@+id/register_button"
                style="@style/Widget.Material3.Button.TextButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:textAppearance="@style/TextAppearance.Material3.BodySmall"
                android:text="@string/create_account" />

        </LinearLayout>
    </ScrollView>

    <ProgressBar
        android:id="@+id/login_progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="gone" />

</FrameLayout>